# OpenAce

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
docs/: Changelog.md  DOCUMENTATION.md  LICENSE  architecture.md
scripts/: README.md  build-all-platforms.ps1  run_builds.sh  run_documentation.sh  run_maintenance.sh
scripts/benchmarks/: benchmarks.rs  run_monitoring.sh
scripts/tests/: c_api_compatibility.rs  python_compatibility.rs  run_tests.sh
scripts/tests/integration/: c_api_compatibility.rs  concurrent_operations.rs  connector_compatibility.rs  end_to_end_workflows.rs  engine_interactions.rs
scripts/tests/performance/: stress_tests.rs
src/: c_api.rs  config.rs  error.rs  error_recovery.rs  lib.rs  main.rs  python.rs  resource_management.rs  state_management.rs  thread_safety.rs
src/core/: engine.rs  logging.rs  mod.rs  string.rs  traits.rs  types.rs
src/engines/: core.rs  live.rs  main_engine.rs  manager.rs  mod.rs  segmenter.rs  streamer.rs  transport.rs
src/utils/: context.rs  logging.rs  memory.rs  mod.rs  string.rs  strings.rs  threading.rs  time.rs
